feat: Enhance CORS configuration
- Add support for frontend URL from application.properties
- Support deployment platforms (Vercel, Netlify, Railway)
- Add HEAD method to allowed methods
- Expose additional headers for client
- Add more explicit allowed headers
- Support wildcard subdomains for deployment platforms