@@ -1,5 +1,6 @@
 package com.riverflow.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -16,17 +17,23 @@ import java.util.List;
 @Configuration
 public class WebConfig {
 
+    @Value("${app.frontend.url:http://localhost:3000}")
+    private String frontendUrl;
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Cho phép tất cả origins từ localhost với bất kỳ port nào
-        // Bạn có thể thay đổi thành domain cụ thể khi deploy production
+        // Cho phép frontend URL từ application.properties và localhost patterns
         configuration.setAllowedOriginPatterns(Arrays.asList(
                 "http://localhost:*",           // Cho phép localhost với mọi port
                 "http://127.0.0.1:*",           // Cho phép 127.0.0.1 với mọi port
                 "https://localhost:*",          // HTTPS localhost
-                "https://127.0.0.1:*"           // HTTPS 127.0.0.1
+                "https://127.0.0.1:*",          // HTTPS 127.0.0.1
+                frontendUrl,                    // Frontend URL từ config
+                "https://*.vercel.app",         // Vercel deployments
+                "https://*.netlify.app",        // Netlify deployments
+                "https://*.railway.app"         // Railway deployments
         ));
         
         // Cho phép các HTTP methods
@@ -36,11 +43,19 @@ public class WebConfig {
                 "PUT", 
                 "PATCH", 
                 "DELETE", 
-                "OPTIONS"
+                "OPTIONS",
+                "HEAD"
         ));
         
         // Cho phép tất cả headers
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedHeaders(Arrays.asList(
+                "*",
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "Origin",
+                "X-Requested-With"
+        ));
         
         // Cho phép gửi credentials (cookies, authorization headers, etc.)
         configuration.setAllowCredentials(true);
@@ -52,7 +67,10 @@ public class WebConfig {
         configuration.setExposedHeaders(Arrays.asList(
                 "Authorization",
                 "Content-Type",
-                "X-Total-Count"
+                "X-Total-Count",
+                "X-Total-Pages",
+                "Access-Control-Allow-Origin",
+                "Access-Control-Allow-Credentials"
         ));
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
